fix text wrapping on learn menu (#136)

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -260,7 +260,7 @@
 
                     .learn {
                         @apply -right-48;
-                        min-width: 67ch;
+                        min-width: 69ch;
                     }
 
                     .dropdown-menu-caret {
